Add missing swagger definitions
